--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ dataclasses-json==0.6.6
 distro==1.9.0
 entrypoints==0.4
 exceptiongroup==1.2.1
+extra-streamlit-components==0.1.71
 Faker==25.2.0
 favicon==0.7.0
 fonttools==4.51.0
@@ -76,6 +77,7 @@ pydantic==2.7.1
 pydantic_core==2.18.2
 pydeck==0.9.1
 Pygments==2.18.0
+PyJWT==2.8.0
 pymdown-extensions==10.8.1
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
@@ -94,12 +96,13 @@ sniffio==1.3.1
 soupsieve==2.5
 SQLAlchemy==2.0.30
 st-annotated-text==4.0.1
-streamlit==1.34.0
+streamlit==1.35.0
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
 streamlit-embedcode==0.1.2
 streamlit-extras==0.4.2
 streamlit-faker==0.0.3
+streamlit-google-auth==1.1.8
 streamlit-image-coordinates==0.1.6
 streamlit-keyup==0.2.4
 streamlit-toggle-switch==1.0.2
